# stock-portfolio-analyst

./: .gitignore  README.md  Untitled.rtf  app.py  final_verification_checklist.md  main.py  pyproject.toml  sample_portfolio.csv  validation_log.md
Sample Data/: Sheet1-Table 1.csv  Sheet2-Table 1.csv
database/: db_models.py
utils/: auth_manager.py  data_processing.py  data_processing_test.py  external_data.py  external_data_test.py  llm_agent.py  llm_agent_test.py  portfolio_math.py  portfolio_math_test.py
