[project]
name = "stock-portfolio-analyst"
version = "0.1.0"
description = "Streamlit AI Stock Portfolio Analyst Agent using yfinance and Groq"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "groq>=0.9.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.15.0"
]

